--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
       <section id="education"><h3 class="section-title">Education</h3><ul>
         <li><b>B.Tech</b> – Computer Science & Engineering (AI & ML), School Of Management Sciences,Lucknow, 2023-2027 – Present</li>
-        <li><b>Intermediate</b> – Science (PCM), I.B.S Intermediate Collage,Bhatparrani,Deoria Uttar Pradesh, 2022-2023</li>
-        <li><b>Matriculation</b> – I.B.S Intermediate Collage,Bhatparrani,Deoria Uttar Pradesh, 2020-2021, 2019</li>
+        <li><b>Intermediate</b> – Science (PCM), Bapu Krishak Intermediate Collage,Bhatparrani,Deoria Uttar Pradesh, 2022-2023</li>
+        <li><b>Matriculation</b> – I.B.S Intermediate Collage,Bhatparrani,Deoria Uttar Pradesh, 2020-2021</li>
       </ul></section>
 
       <section id="projects"><h3 class="section-title">Projects</h3><ul>
@@ -71,7 +71,7 @@
       </ul></section>
 
       <section id="internships"><h3 class="section-title">Internships</h3><ul>
-        <li><b>Alfido Company</b> – Web Developer Intern (Built responsive front-end components)</li>
+        <li><b>Alfido</b> – Web Developer Intern (Built responsive front-end components)</li>
       </ul></section>
 
       <section id="skills"><h3 class="section-title">Skills</h3><ul>
@@ -87,11 +87,11 @@
 
       <!--  <section id="achievements"><h3 class="section-title">Achievements</h3><ul> 
         <li>📜 NA</li>
-      </ul></section> -->
+      </ul></section> 
 
       <section id="extra"><h3 class="section-title">Extra-Curricular</h3><ul>
         <li>🤝 Member of Engineer Vision Club</li>
-       </ul></section>
+       </ul></section> -->
 
       <section id="socials"><h3 class="section-title">Social Media</h3>
         <p>Stay connected with me on my social platforms:</p>
