--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="https://x.com/abhaykushwaha__" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"> Twitter/X</a>  
         <a href="https://youtube.com/@official.abhaykushwaha" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"> YouTube</a> 
         <a href="https://t.me/abhaykushwaha5" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111644.png" alt="Telegram"> Telegram</a>  
-        <a href="https://www.facebook.com/share/1CzcKWPzSt/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"> Facebook</a>             
+        <a href="https://www.facebook.com/abhay.kushwaha.05" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"> Facebook</a>             
         <a href="https://www.instagram.com/abhaykushwaha._" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"> Instagram</a>  
         <a href="https://whatsapp.com/channel/0029Vb2mURZ8V0tirW37bk3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp"> WhatsApp</a>  
        </div>
