--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <li>🤖 <b>Telegram GPT Bot</b> – AI-powered chatbot integrating Gemini API with Telegram.</li>
         <li>💻 <b>Portfolio Website</b> – Fully responsive and theme-switching personal site.</li>
         <li>📊 <b>Data Visualizer</b> – Python tool for data analysis and visualization.</li>
+        <li>💻 <b>IBM Cloud Computing</b> – Create chatbot.</li>
       </ul></section>
 
       <section id="internships"><h3 class="section-title">Internships</h3><ul>
